contrast correction

--- a/style-album.css
+++ b/style-album.css
@@ -113,7 +113,8 @@
 }
 
 .podium .top3  {
-    background-color: palevioletred;
+    background-color: #A854B1;
+    
 }
 
 /* Image podium */
