--- a/style-graphe-monde.css
+++ b/style-graphe-monde.css
@@ -45,7 +45,7 @@
     width: 30%;
     max-width: 700px;
     margin-right: 100px;
-    background-color: #b076dd;
+    background-color: #A854B1;
     padding: 10px;
     color: white;
     font-size: 0.9rem;
